# cipher-file-transfer

./: .keyfile  Dockerfile  README.md  WAN_SETUP_GUIDE.md  cipher-major.rar  docker-compose.yml  p2p_app.py  peer.py  pyproject.toml  rendezvous_server.py  requirements.txt  run_local_test.py  temp.py  user_registry.json
shared_files/: file_hashes.json
tests/: test_crypto_utils.py  test_integration.py  test_password_utils.py
utils/: crypto_utils.py  password_utils.py
