[tool.poetry]
name = "cipher-major"
version = "0.1.0"
description = "P2P File Sharing Application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# Add the dependencies based on imports in your code
argparse = "^1.4.0"
upnpclient = "^1.0.3"  # Library for UPnP port forwarding
requests = "^2.28.2"   # Required by upnpclient

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
p2p_app = "p2p_app:main"